@@ -52,7 +52,7 @@ public abstract class AbstractService<T> implements Service<T> {
     @Override
     public T findBy(String fieldName, Object value) throws TooManyResultsException {
         try {
-            T model = modelClass.newInstance();
+            T model = modelClass.getDeclaredConstructor().newInstance();
             Field field = modelClass.getDeclaredField(fieldName);
             field.setAccessible(true);
             field.set(model, value);
